includes/templates/admin/eael-dashboard/src/App.css
/* ... */
#ea__dashboard--wrapper {
  font-family: "Rubik", sans-serif;
}

.eael_btn_loader {
  width: 15px;
  height: 15px;
  border-radius: 50%;
  position: relative;
  animation: ea_rotate 1s linear infinite
}
.eael_btn_loader::before {
  content: "";
  box-sizing: border-box;
  position: absolute;
  inset: 0;
  border-radius: 50%;
  border: 2px solid #FFF;
  animation: eaPrixClipFix 2s linear infinite ;
}

@keyframes ea_rotate {
  100%   {transform: rotate(360deg)}
}

@keyframes eaPrixClipFix {
  0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
  25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
  50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
  75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
  100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
}

#ea__dashboard--wrapper {
  font-size: 16px;
  font-family: "Rubik", sans-serif;
  background: var(--page-background);
}

a {
  text-decoration: none;
  display: inline-flex;
}

img {
  max-width: 100%;
}

input:focus {
  outline: 0 !important;
  box-shadow: none !important;
}

.relative {
  position: relative;
}

.hidden {
  overflow: hidden;
}

.rotate-180 {
  transform: rotate(180deg);
}

.flex {
  display: flex;
}

.flex-col {
  flex-direction: column;
}

.flex-1 {
  flex: 1;
}

.justify-between {
  justify-content: space-between;
}

.justify-center {
  justify-content: center;
}

.flex-end {
  justify-content: flex-end;
}

.items-start {
  align-items: flex-start;
}

.items-center {
  align-items: center;
}

.min-h-full {
  min-height: 100vh;
}

.gap-1 {
  gap: 4px;
}

.gap-2 {
  gap: 8px;
}

.gap-4 {
  gap: 16px;
}

.gap-5 {
  gap: 20px;
}

.gap-6 {
  gap: 24px;
}

.gap-10 {
  gap: 40px;
}

.mb-1 {
  margin-bottom: 4px;
}

.mb-2 {
  margin-bottom: 8px;
}

.mb-3 {
  margin-bottom: 12px;
}

.mb-4 {
  margin-bottom: 16px;
}

.mb-5 {
  margin-bottom: 20px;
}

.mb-6 {
  margin-bottom: 24px;
}

.mb-7 {
  margin-bottom: 28px;
}

.mb-8 {
  margin-bottom: 32px;
}

.mb-10 {
  margin-bottom: 40px;
}

.pointer {
  cursor: pointer;
}

.d-none {
  display: none;
}

.min-h-538 {
  min-height: 538px;
}

#ea__dashboard--wrapper .min-w-220 {
  min-width: 220px;
}

#ea__dashboard--wrapper .max-w-220 {
  max-width: 220px;
}

#ea__dashboard--wrapper .min-w-230 {
  min-width: 230px;
}

#ea__dashboard--wrapper .max-w-230 {
  max-width: 230px;
}

#ea__dashboard--wrapper .max-w-454 {
  max-width: 454px;
}

#ea__dashboard--wrapper .underline {
  text-decoration: underline;
}

#ea__dashboard--wrapper .primary-btn {
  font-size: 14px;
  font-weight: 450;
  line-height: 1.6em;
  font-family: "Rubik", sans-serif;
  color: var(--text-color-50);
  display: inline-flex;
  gap: 10px;
  align-items: center;
  justify-content: center;
  padding: 8px 20px;
  background: transparent;
  border-radius: 8px;
  border: 1px solid var(--text-color-100);
  transition: all .35s ease-in-out;
  cursor: pointer;
  position: relative;

}

#ea__dashboard--wrapper .primary-btn:hover {
  color: #ffffff;
  background: var(--base-color-75);
  border: 1px solid var(--base-color-75);

}

#ea__dashboard--wrapper .primary-btn.install-btn {
  color: #ffffff;
  border: 1px solid var(--base-color-75);
  background: conic-gradient(from 195.22deg at 68.31% 39.29%, rgba(143, 32, 251, 0) 0deg, #8F20FB 360deg), linear-gradient(0deg, #6F0AF2, #6F0AF2);
}

#ea__dashboard--wrapper .primary-btn.install-btn[disabled] {
  cursor: not-allowed;
}

#ea__dashboard--wrapper button.primary-btn.changelog-btn i {
  font-size: 9px;
}

#ea__dashboard--wrapper button.primary-btn.install-btn i {
  font-size: 12px;
}

#ea__dashboard--wrapper button.upgrade-button {
  font-size: 14px;
  font-weight: 450;
  line-height: 1.5rem;
  font-family: "Rubik", sans-serif;
  color: var(--base-background);
  display: flex;
  gap: 10px;
  align-items: center;
  justify-content: center;
  padding: 10px 22px;
  background: var(--base-color-100);
  border-radius: 8px;
  border-bottom: 1px solid var(--border-color-3);
  transition: all .35s ease-in-out;
  cursor: pointer;
  position: relative;
  width: 100%;
}

#ea__dashboard--wrapper button.upgrade-button:hover {
  color: var(--base-background);
  background: var(--base-color-100);
  border-bottom: 1px solid var(--border-color-3);
}

#ea__dashboard--wrapper button.upgrade-button i {
  font-size: 16px;
}

#ea__dashboard--wrapper button {
  font-size: 14px;
  font-weight: 450;
  line-height: 1.3em;
  font-family: "Rubik", sans-serif;
  background: transparent;
  border: none;
  color: var(--text-color-50);
  cursor: pointer;
  transition: all .35s ease-in-out;
}

#ea__dashboard--wrapper button:hover {
  color: var(--base-color-50);
}

#ea__dashboard--wrapper h3.ea__content-title {
  font-size: 18px;
  line-height: 1.2em;
  font-weight: 500;
  color: var(--text-color-25);
}

#ea__dashboard--wrapper h3.ea__content-title.title {
  margin-bottom: 16px;
}

#ea__dashboard--wrapper .toggle-label {
  font-size: 14px;
  line-height: 1.2em;
  font-weight: 400;
  color: var(--text-color-25);
}

#ea__dashboard--wrapper input.input-name {
  font-size: 14px;
  color: var(--text-color-100);
  line-height: 1.2em;
  border: none;
  border-right: 1px solid var(--label-color);
  padding-left: 16px;
  padding-right: 16px;
  width: 220px;
  background: transparent;
}

#ea__dashboard--wrapper input.input-name:focus-visible {
  outline: 0;
}

#ea__dashboard--wrapper ::placeholder {
  color: var(--text-icon-500);
}

#ea__dashboard--wrapper .select-option-wrapper {
  position: relative;
}

#ea__dashboard--wrapper .form-select {
  color: var(--text-color-100);
  font-size: 14px;
  line-height: 1.5em;
  min-width: 140px;
  height: 44px;
  border: none;
  padding-left: 16px;
  padding-right: 35px;
  background: transparent;
  cursor: pointer;
  appearance: none;
}

#ea__dashboard--wrapper .form-select:focus-visible,
#ea__dashboard--wrapper .form-select:focus {
  outline: 0;
  box-shadow: none;
}
/* ... */

